--- a/ibsen.css
+++ b/ibsen.css
@@ -24,5 +24,25 @@ h1{
 .krogstad{
     color:brown
 }
+table{
+    width: 50%;
+    border-collapse: collapse;
+    margin: bottom 10px;
+}
+table th{
+    
+    color:black;
+    text-align:left;
+    padding : 5px;
+    border:3px solid #2b2424;
+}
+table td{
+    text-align:left;
+    padding:10px;
+    border:1px solid #0c0000;
+}
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
 
 
