--- a/ibsen.css
+++ b/ibsen.css
@@ -53,5 +53,21 @@ table td{
 tr:nth-child(even) {
     background-color: #f2f2f2;
   }
+  .navbar {
+    background-color: #333;
+    overflow: hidden;
+  }
+  .navbar a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  .navbar a:hover {
+    background-color: #ddd;
+    color: rgb(16, 207, 41);
+  }
   
 
